--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "lint:js": "eslint .",
     "start": "ember serve",
     "test": "ember test",
-    "test:all": "ember try:each"
+    "test:test-apps": "cd test-apps/new-app && yarn test",
+    "test:all": "ember try:each",
+    "prepare": "./scripts/link-them.sh"
   },
   "dependencies": {
     "ember-cli-babel": "^7.17.2",
@@ -32,14 +34,17 @@
     "broccoli-asset-rev": "^3.0.0",
     "ember-auto-import": "^1.5.3",
     "ember-cli": "~3.16.0",
+    "ember-cli-app-version": "^3.2.0",
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-eslint": "^5.1.0",
     "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.3",
     "ember-cli-uglify": "^3.0.0",
+    "ember-data": "^3.16.2",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.1",
+    "ember-fetch": "^7.0.1",
     "ember-load-initializers": "^2.1.1",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-qunit": "^4.6.0",
