--- a/package.json
+++ b/package.json
@@ -14,33 +14,33 @@
   },
   "scripts": {
     "build": "ember build --environment=production",
+    "lint": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*",
     "lint:hbs": "ember-template-lint .",
     "lint:js": "eslint .",
     "start": "ember serve",
-    "test": "ember test",
+    "test": "npm-run-all lint:* test:*",
+    "test:ember": "ember test",
+    "test:ember-compatibility": "ember try:each",
     "test:test-apps": "cd test-apps/new-app && yarn test",
-    "test:all": "ember try:each",
     "prepare": "./scripts/link-them.sh",
     "release": "release-it"
   },
   "dependencies": {
-    "ember-cli-babel": "^7.17.2",
-    "ember-cli-htmlbars": "^4.2.2"
+    "ember-cli-babel": "^7.18.0",
+    "ember-cli-htmlbars": "^4.2.3"
   },
   "devDependencies": {
     "@ember/optional-features": "^1.3.0",
     "@glimmer/component": "^1.0.0",
     "@glimmer/tracking": "^1.0.0",
-    "babel-eslint": "^10.0.3",
+    "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "ember-auto-import": "^1.5.3",
-    "ember-cli": "~3.16.0",
+    "ember-cli": "~3.17.0",
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-dependency-checker": "^3.2.0",
-    "ember-cli-eslint": "^5.1.0",
     "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-sri": "^2.1.1",
-    "ember-cli-template-lint": "^1.0.0-beta.3",
     "ember-cli-uglify": "^3.0.0",
     "ember-data": "^3.16.2",
     "ember-disable-prototype-extensions": "^1.1.3",
@@ -50,14 +50,17 @@
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-qunit": "^4.6.0",
     "ember-resolver": "^7.0.0",
-    "ember-source": "~3.16.0",
+    "ember-source": "~3.17.0",
     "ember-source-channel-url": "^2.0.1",
+    "ember-template-lint": "^2.4.0",
     "ember-try": "^1.4.0",
-    "eslint-plugin-ember": "^7.7.2",
+    "eslint": "^6.8.0",
+    "eslint-plugin-ember": "^7.10.1",
     "eslint-plugin-node": "^11.0.0",
     "lerna-changelog": "^1.0.1",
     "loader.js": "^4.7.0",
-    "qunit-dom": "^1.0.0",
+    "npm-run-all": "^4.1.5",
+    "qunit-dom": "^1.1.0",
     "release-it": "^12.6.3",
     "release-it-lerna-changelog": "^1.0.3"
   },
