--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "keywords": [
     "ember-addon"
   ],
-  "repository": "",
+  "repository": "https://github.com/abel-n/ember-argument-decorator",
   "license": "MIT",
   "author": "",
   "directories": {
